Bug 378173, template removes content incorrectly with multiple queries, r=smaug,sr=peterv